--- a/book.toml
+++ b/book.toml
@@ -5,5 +5,8 @@ multilingual = false
 src = "src"
 title = "The Monero Book"
 
+[build]
+create-missing = false
+
 [output.html]
 mathjax-support = true
