--- a/book.toml
+++ b/book.toml
@@ -11,6 +11,9 @@ create-missing = false
 [output.html]
 mathjax-support = true
 additional-css = ["svgbob.css"]
+git-repository-url = "https://github.com/Cuprate/monero-book"
+git-repository-icon = "fa-github"
+no-section-label = true
 
 [output.html.fold]
 enable = true
