add --locked to install

--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -27,8 +27,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install mdBook
         run: |
-          cargo install --version ${MDBOOK_VERSION} mdbook
-          cargo install --version ${MDBOOK_SVGBOB_VERSION} mdbook-svgbob
+          cargo install --locked --version ${MDBOOK_VERSION} mdbook
+          cargo install --locked --version ${MDBOOK_SVGBOB_VERSION} mdbook-svgbob
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
